syntax = "proto3";

package ibc.core.port.v1;

option go_package = "github.com/cosmos/ibc-go/modules/core/05-port/types";

import "ibc/core/channel/v1/channel.proto";

// Query defines the gRPC querier service
service Query {
  // NegotiateAppVersion queries an IBC Port and determines the appropriate application version to be used
  rpc NegotiateAppVersion(NegotiateAppVersionRequest) returns (NegotiateAppVersionResponse) {}
}

// NegotiateAppVersionRequest is the request type for the Query/NegotiateAppVersion RPC method
message NegotiateAppVersionRequest {
  // port unique identifier
  string port_id = 1;
  // counterparty channel end
  ibc.core.channel.v1.Counterparty counterparty = 2;
  // proposed version
  string proposed_version = 3;
}

// NegotiateAppVersionResponse is the response type for the Query/NegotiateAppVersion RPC method.
message NegotiateAppVersionResponse {
  // port id associated with the request identifiers
  string port_id = 1;
  // supported app version
  string version = 2;
}
